<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    android:background="@drawable/dottedborder">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Your E-Voucher Rate"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Mobile App Special Voucher"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toStartOf="@+id/next"
        />
    <ImageView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/nextred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginStart="20dp"
        android:drawableTop="@drawable/fnb2x"
        android:text="@string/inclusiveBreakfast"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:layout_weight="0.5"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/detail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/discount2x"
        android:text="@string/discount"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/detail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/btnViewRate"/>
    <TextView
        android:id="@+id/btnViewRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/view_rate_background"
        android:text="@string/view_rate"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/detail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"

        />
    <TextView
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        />

    <TextView
        android:id="@+id/priceTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Avg-Nightly/Room From"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/roomPrice"
        app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/spacer"        />

    <TextView
        android:id="@+id/roomDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Subject to GST and Service Carges "
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/priceTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/roomPrice"/>

    <TextView
        android:id="@+id/roomPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SGD 161.42"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/spacer"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>